--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Testing w/Andrew",
   "main": "index.js",
   "scripts": {
-    "test": "mocha **/*.test.js"
+    "test": "mocha **/*.test.js",
+    "test-watch": "nodemon --exec \"npm test\""
   },
   "author": "rayGreycloud",
   "license": "ISC",
